2005-02-08 22:30  Dan McMahill <danmc>

	* include/prototype.h, src/g_rc.c, src/g_register.c,
	  src/gsymcheck.c: replace deprecated guile functions with approved
	  guile-1.6.6 ones

2005-02-04  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gsymcheck.c, src/s_check.c: Replaced u_basic_strdup() and 
	u_basic_strdup_multiple() by GLib functions.
	
	* src/gsymcheck.c: Made it use GLib's G_DIR_SEPARATOR* instead of 
	libgeda's *_SEPARATER_*.

2005-01-29  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/gsymcheck.c (gsymcheck_quit): Adapted for new component library
	code.

2005-01-27 Stuart Brorson   <sdb@cloud9.net>

	* src/gsymcheck.c: Changes made to enable correct opening
	of schematics in foreign directories.  Changes detailed in libgeda
	ChangeLog.  
	
2004-12-27 Stuart Brorson   <sdb@cloud9.net>

        * lib/system-gsymcheckrc.in: Changed reference to system-commonrc
	to system-gafrc

2004-12-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/pincounts.h, include/struct.h, include/prototype.h, 
	src/s_check.c, src/s_symstruct.c: Applied patch by Jim Duchek which
	adds several important tests to gsymcheck: 

		net=Vcc:8,15,14 (for example) is now checked against
		the pinnumber= attribs for duplicates.	footprint=
		is checked to get the proper pincount (I included some
		support for special cases like TO92, which doesn't
		quite have 92 pins :), and the number of pins defined
		vs. the number of pins that SHOULD be defined is compared.
		Total pins are found by: total = num_net_pins + (numslots
		* numpins).  Of course if numslots == 0 that multiplier
		doesn't happen.
	
	* tests/incorrect_footprint.sym duplicate_net.sym: Added a couple
	test symbols to exercise the above patch

2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/i_vars.h, prototype.h, src/g_rc.c, g_register.c,
	gsymcheck.c, i_vars.c: Removed a whole bunch of rc related code.