@@ -67,6 +67,12 @@ struct st_symcheck {
 
   /* total warning counter */
   int warning_count;
+
+  /* pintype= check */
+  int missing_pintype_attrib;
+  int multiple_pintype_attrib;
+  int duplicate_pintype_attrib;
+
   
 };
 
