@@ -1,3 +1,8 @@
+2005-02-09 Carlos Nieves Onega <cnieves@iespana.es>
+	* include/prototype.h, include/struct.h, src/s_check.c, 
+	  src/s_symstruct.c:
+	  Added check of pintype attribute value.
+	
 2005-02-08 22:30  Dan McMahill <danmc>
 
 	* include/prototype.h, src/g_rc.c, src/g_register.c,
